updated GP class

--- a/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
+++ b/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
@@ -56,8 +56,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:11:39.746108Z",
-     "start_time": "2018-10-22T09:11:39.449038Z"
+     "end_time": "2018-10-23T06:47:33.684378Z",
+     "start_time": "2018-10-23T06:47:31.360872Z"
     }
    },
    "outputs": [],
@@ -149,8 +149,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:24:38.501571Z",
-     "start_time": "2018-10-22T09:24:37.759618Z"
+     "end_time": "2018-10-23T07:12:59.505678Z",
+     "start_time": "2018-10-23T07:12:57.466718Z"
     }
    },
    "outputs": [],
@@ -176,8 +176,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:24:56.810525Z",
-     "start_time": "2018-10-22T09:24:56.803165Z"
+     "end_time": "2018-10-23T07:14:32.397959Z",
+     "start_time": "2018-10-23T07:14:32.390542Z"
     }
    },
    "outputs": [],
@@ -229,8 +229,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:15.026191Z",
-     "start_time": "2018-10-22T09:38:14.489018Z"
+     "end_time": "2018-10-23T07:18:08.740462Z",
+     "start_time": "2018-10-23T07:18:08.304662Z"
     }
    },
    "outputs": [],
@@ -262,8 +262,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:29.556873Z",
-     "start_time": "2018-10-22T09:38:19.312021Z"
+     "end_time": "2018-10-23T07:18:56.460914Z",
+     "start_time": "2018-10-23T07:18:47.013845Z"
     }
    },
    "outputs": [],
@@ -292,8 +292,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:33.043849Z",
-     "start_time": "2018-10-22T09:38:32.839282Z"
+     "end_time": "2018-10-23T07:19:59.587801Z",
+     "start_time": "2018-10-23T07:19:59.366970Z"
     }
    },
    "outputs": [],
@@ -317,7 +317,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T07:20:53.548874Z",
+     "start_time": "2018-10-23T07:20:53.539579Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -328,8 +333,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:40.119702Z",
-     "start_time": "2018-10-22T09:38:39.892835Z"
+     "end_time": "2018-10-23T07:21:01.613819Z",
+     "start_time": "2018-10-23T07:21:01.391812Z"
     }
    },
    "outputs": [],
@@ -351,8 +356,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:44.118314Z",
-     "start_time": "2018-10-22T09:38:44.109117Z"
+     "end_time": "2018-10-23T07:21:50.428368Z",
+     "start_time": "2018-10-23T07:21:50.416442Z"
     }
    },
    "outputs": [],
@@ -368,8 +373,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:46.271549Z",
-     "start_time": "2018-10-22T09:38:46.261982Z"
+     "end_time": "2018-10-23T07:21:56.858660Z",
+     "start_time": "2018-10-23T07:21:56.846386Z"
     }
    },
    "outputs": [],
@@ -388,8 +393,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:47.999430Z",
-     "start_time": "2018-10-22T09:38:47.994562Z"
+     "end_time": "2018-10-23T07:22:09.372273Z",
+     "start_time": "2018-10-23T07:22:09.363687Z"
     }
    },
    "outputs": [],
@@ -405,8 +410,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:49.120635Z",
-     "start_time": "2018-10-22T09:38:49.107473Z"
+     "end_time": "2018-10-23T07:22:29.331957Z",
+     "start_time": "2018-10-23T07:22:29.318267Z"
     },
     "scrolled": false
    },
@@ -433,8 +438,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:55.186288Z",
-     "start_time": "2018-10-22T09:38:54.925939Z"
+     "end_time": "2018-10-23T07:25:29.242070Z",
+     "start_time": "2018-10-23T07:25:29.030221Z"
     }
    },
    "outputs": [],
@@ -482,8 +487,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:56.908404Z",
-     "start_time": "2018-10-22T09:38:56.886588Z"
+     "end_time": "2018-10-23T07:25:32.200327Z",
+     "start_time": "2018-10-23T07:25:32.177176Z"
     }
    },
    "outputs": [],
@@ -505,8 +510,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:38:58.157554Z",
-     "start_time": "2018-10-22T09:38:58.034641Z"
+     "end_time": "2018-10-23T07:25:52.746415Z",
+     "start_time": "2018-10-23T07:25:52.623744Z"
     }
    },
    "outputs": [],
@@ -568,7 +573,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
