--- a/5 - Gaussian Processes/Gaussian Processes.ipynb
+++ b/5 - Gaussian Processes/Gaussian Processes.ipynb
@@ -68,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:43:01.038845Z",
-     "start_time": "2018-10-22T09:43:00.452866Z"
+     "end_time": "2018-10-23T07:29:14.405370Z",
+     "start_time": "2018-10-23T07:29:13.736823Z"
     }
    },
    "outputs": [],
@@ -102,8 +102,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:43:39.087948Z",
-     "start_time": "2018-10-22T09:43:38.702838Z"
+     "end_time": "2018-10-23T07:31:23.782076Z",
+     "start_time": "2018-10-23T07:31:23.336230Z"
     }
    },
    "outputs": [],
@@ -230,8 +230,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:52:39.187425Z",
-     "start_time": "2018-10-22T09:52:38.593206Z"
+     "end_time": "2018-10-23T07:51:13.988941Z",
+     "start_time": "2018-10-23T07:51:13.376538Z"
     }
    },
    "outputs": [],
@@ -261,37 +261,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find the best function, we need a covariance kernel. We will take the square exponential kernel with arbitrary $\\sigma$ and $l$ parameters and will modify it slightly to account for the measurement noise $\\sigma_n$. Then we simply apply the formula above.\n",
-    "\n",
+    "To find the best function, we need a covariance kernel. We will take the square exponential kernel with arbitrary $\\sigma$ and $l$ parameters and will modify it slightly to account for the measurement noise $\\sigma_n$. Then we simply apply the formula above.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:04:32.076937Z",
+     "start_time": "2018-10-23T08:04:31.720492Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sigma_kernel = 0.2\n",
+    "l=0.3\n",
+    "def kernel(x1,x2,sigma_kernel,l,sigma_noise):\n",
+    "    return sigma_kernel * sigma_kernel * np.exp(-(x1-x2)**2 / (2*l*l)) + sigma_noise*(x1==x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-warning\">**Exercice:**\n",
-    "Your turn to play. Fill the gaps below to predict the output values and standard deviations.\n",
+    "Your turn to play. Define two functions `compute_K(X,sigma_kernel,l,sigma_noise)` (that returns the covariance matrix) and `GPpredict(x_new, x_data, y_data, Kinv)` (that returns the mean and standard deviation of the output value) below.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:04:32.076937Z",
+     "start_time": "2018-10-23T08:04:31.720492Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code5.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "sigma_kernel = 0.2\n",
-    "l=0.3\n",
-    "def kernel(x1,x2,sigma_kernel,l,sigma_noise):\n",
-    "    return sigma_kernel * sigma_kernel * np.exp(-(x1-x2)**2 / (2*l*l)) + sigma_noise*(x1==x2)\n",
-    "\n",
-    "def compute_K(X,sigma_kernel,l,sigma_noise):\n",
-    "    ### FILL THE VALUES OF K\n",
-    "    return K\n",
-    "\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:04:32.076937Z",
+     "start_time": "2018-10-23T08:04:31.720492Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "Kinv = np.linalg.inv(compute_K(X,sigma_kernel,l,sigma_noise))\n",
-    "\n",
-    "def GPpredict(x_new, x_data, y_data, Kinv):\n",
-    "    ### COMPUTE MEAN AND STANDARD DEVIATION\n",
-    "    return mu, sigma\n",
     "\n",
     "x = np.linspace(-5,10,100)\n",
     "y = np.zeros(x.shape)\n",
@@ -310,7 +336,7 @@
     "plt.xlabel('$x$')\n",
     "plt.ylabel('$f(x)$')\n",
     "plt.ylim(-6, 10)\n",
-    "plt.legend(loc='upper left');\n"
+    "plt.legend(loc='upper left');"
    ]
   },
   {
@@ -328,6 +354,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:07:38.502669Z",
+     "start_time": "2018-10-23T08:07:38.163730Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -384,8 +414,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:55:33.305307Z",
-     "start_time": "2018-10-22T09:55:33.045809Z"
+     "end_time": "2018-10-23T08:09:34.601535Z",
+     "start_time": "2018-10-23T08:09:34.403799Z"
     }
    },
    "outputs": [],
@@ -402,8 +432,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:55:34.531164Z",
-     "start_time": "2018-10-22T09:55:34.171861Z"
+     "end_time": "2018-10-23T08:09:38.849585Z",
+     "start_time": "2018-10-23T08:09:38.541507Z"
     }
    },
    "outputs": [],
@@ -456,8 +486,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T09:55:57.302801Z",
-     "start_time": "2018-10-22T09:55:56.751503Z"
+     "end_time": "2018-10-23T08:18:55.241050Z",
+     "start_time": "2018-10-23T08:18:54.699618Z"
     }
    },
    "outputs": [],
@@ -473,6 +503,7 @@
     "# GP training\n",
     "gp_kernel = ExpSineSquared(1.0, 5.0, periodicity_bounds=(1e-2, 1e1)) + WhiteKernel(1e-1)\n",
     "gpr = GaussianProcessRegressor(kernel=gp_kernel)\n",
+    "#gpr = GaussianProcessRegressor()\n",
     "gpr.fit(X, y)\n",
     "\n",
     "# GP prediction\n",
@@ -523,7 +554,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:22:02.068822Z",
+     "start_time": "2018-10-23T08:21:57.103287Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -552,14 +588,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:33:53.694630Z",
+     "start_time": "2018-10-23T08:32:57.423489Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code6.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "from sklearn.gaussian_process import GaussianProcessClassifier\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -576,7 +615,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:34:08.265221Z",
+     "start_time": "2018-10-23T08:34:08.259067Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -585,7 +629,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:35:17.341764Z",
+     "start_time": "2018-10-23T08:34:15.431177Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code7.py\n",
@@ -615,7 +664,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:36:25.583975Z",
+     "start_time": "2018-10-23T08:36:09.178688Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -630,7 +684,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:36:25.591676Z",
+     "start_time": "2018-10-23T08:36:25.585685Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -660,7 +719,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:36:58.938911Z",
+     "start_time": "2018-10-23T08:36:58.854669Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -682,7 +746,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:37:21.844184Z",
+     "start_time": "2018-10-23T08:37:21.835911Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -697,7 +766,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-23T08:37:33.987664Z",
+     "start_time": "2018-10-23T08:37:26.782859Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
