--- a/5 - Gaussian Processes/Gaussian Processes.ipynb
+++ b/5 - Gaussian Processes/Gaussian Processes.ipynb
@@ -303,7 +303,27 @@
    "source": [
     "# %load solutions/code5.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "def compute_K(X,sigma_kernel,l,sigma_noise):\n",
+    "    ### FILL THE VALUES OF K\n",
+    "    N = X.shape[0]\n",
+    "    K = np.zeros((N,N))\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            K[i,j] = kernel(X[i],X[j],sigma_kernel,l,sigma_noise)\n",
+    "    return K\n",
+    "\n",
+    "def GPpredict(x_new, x_data, y_data, Kinv):\n",
+    "    ### COMPUTE MEAN AND STANDARD DEVIATION\n",
+    "    N = y_data.shape[0]\n",
+    "    Kstar = np.zeros((1,N))\n",
+    "    for i in range(N):\n",
+    "        Kstar[0,i] = kernel(x_data[i], x_new, sigma_kernel, l, sigma_noise)\n",
+    "    mu = Kstar @ Kinv @ y_data\n",
+    "    sigma = kernel(x_new,x_new,sigma_kernel,l,sigma_noise) - Kstar @ Kinv @ Kstar.T\n",
+    "    return mu, sigma\n",
+    "\n"
    ]
   },
   {
@@ -817,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
