added Intro to DL by MS + added correction of GPR practice session + added todo for the NN warm-up

--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -142,8 +142,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T08:54:50.151977Z",
-     "start_time": "2018-11-05T08:54:47.424038Z"
+     "end_time": "2018-11-05T13:40:14.088863Z",
+     "start_time": "2018-11-05T13:40:11.489410Z"
     }
    },
    "outputs": [],
@@ -179,8 +179,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T08:55:17.149889Z",
-     "start_time": "2018-11-05T08:55:17.135130Z"
+     "end_time": "2018-11-05T13:43:15.678054Z",
+     "start_time": "2018-11-05T13:43:15.660896Z"
     }
    },
    "outputs": [],
@@ -213,8 +213,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T08:57:04.236415Z",
-     "start_time": "2018-11-05T08:57:04.205191Z"
+     "end_time": "2018-11-05T13:57:09.347731Z",
+     "start_time": "2018-11-05T13:57:09.299789Z"
     }
    },
    "outputs": [],
@@ -255,8 +255,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T09:16:20.291680Z",
-     "start_time": "2018-11-05T09:16:20.286084Z"
+     "end_time": "2018-11-05T14:02:58.470036Z",
+     "start_time": "2018-11-05T14:02:58.464143Z"
     }
    },
    "outputs": [],
@@ -272,8 +272,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T09:16:20.951703Z",
-     "start_time": "2018-11-05T09:16:20.941186Z"
+     "end_time": "2018-11-05T14:08:57.981047Z",
+     "start_time": "2018-11-05T14:08:57.971121Z"
     }
    },
    "outputs": [],
@@ -518,8 +518,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:17:49.226286Z",
-     "start_time": "2018-11-05T10:17:48.901077Z"
+     "end_time": "2018-11-05T15:30:47.041796Z",
+     "start_time": "2018-11-05T15:30:46.781492Z"
     }
    },
    "outputs": [],
@@ -552,17 +552,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:20:27.765344Z",
-     "start_time": "2018-11-05T10:20:27.760463Z"
+     "end_time": "2018-11-05T15:32:00.449788Z",
+     "start_time": "2018-11-05T15:32:00.446522Z"
     }
    },
    "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "\n",
-    "myNN = MLPRegressor(hidden_layer_sizes=(10,5), activation='logistic', solver='sgd')\n",
+    "myNN = MLPRegressor(hidden_layer_sizes=(10,5), activation='logistic', solver='sgd', max_iter=2000)\n",
     "#myNN = MLPRegressor(hidden_layer_sizes=(100,10), activation='logistic')\n",
-    "#myNN = MLPRegressor(hidden_layer_sizes=(1000,100), activation='logistic')"
+    "#myNN = MLPRegressor(hidden_layer_sizes=(1000,100), activation='logistic', solver='sgd', max_iter=2000)"
    ]
   },
   {
@@ -570,13 +570,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:20:29.223909Z",
-     "start_time": "2018-11-05T10:20:28.856697Z"
+     "end_time": "2018-11-05T15:32:10.653210Z",
+     "start_time": "2018-11-05T15:32:01.224671Z"
     }
    },
    "outputs": [],
    "source": [
+    "print(X.shape)\n",
     "X=X.reshape(-1,1)\n",
+    "print(X.shape)\n",
     "\n",
     "myNN.fit(X,Y)"
    ]
@@ -586,8 +588,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:20:29.552041Z",
-     "start_time": "2018-11-05T10:20:29.225953Z"
+     "end_time": "2018-11-05T15:32:15.366639Z",
+     "start_time": "2018-11-05T15:32:14.911245Z"
     }
    },
    "outputs": [],
@@ -628,8 +630,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:21:55.849832Z",
-     "start_time": "2018-11-05T10:21:45.916390Z"
+     "end_time": "2018-11-05T15:42:33.630873Z",
+     "start_time": "2018-11-05T15:42:23.766728Z"
     }
    },
    "outputs": [],
@@ -648,8 +650,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:22:05.234504Z",
-     "start_time": "2018-11-05T10:21:57.352421Z"
+     "end_time": "2018-11-05T15:44:00.394474Z",
+     "start_time": "2018-11-05T15:43:50.926114Z"
     }
    },
    "outputs": [],
@@ -665,8 +667,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-05T10:22:07.468739Z",
-     "start_time": "2018-11-05T10:22:07.456894Z"
+     "end_time": "2018-11-05T15:44:03.083146Z",
+     "start_time": "2018-11-05T15:44:03.073891Z"
     }
    },
    "outputs": [],
@@ -716,7 +718,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
