updated DL class images

--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -104,13 +104,29 @@
     "- The vector of outputs for all neurons in a given layer is called the layer's activation.\n",
     "\n",
     "**A bit of history:**<br>\n",
-    "1943: McCulloch (neurophysiologist) and Pitts (logician) suggest a first formal model for neurons.<br>\n",
-    "1949: Hebb suggests dendrites are strengthened whenever they are used.<br>\n",
-    "1951: Minsky designs a network of artificial neurons.<br>\n",
-    "1958: Roseblatt designs the Perceptron, with step activation functions.<br>\n",
-    "1962: Widrow and Hoff suggest the delta-rule for adapting a network weights to obtain the desired output.<br>\n",
-    "1970s and 80s: The \"quiet years\". Attention turns to other methods while computing resources slowly increase.<br>\n",
-    "1986: Rediscovery of the backpropagation algorithm.<br>\n",
+    "1943: McCulloch (neurophysiologist) and Pitts (logician) suggest a first formal model for neurons.\n",
+    "> A logical calculus of the ideas immanent in nervous activity. McCulloch, W. and Pitts, W. Bulletin of Mathematical Biophysics, 5:115–133. (1943). [paper](https://link.springer.com/article/10.1007%2FBF02478259), [wikipedia](https://en.wikipedia.org/wiki/Artificial_neuron).\n",
+    "\n",
+    "1949: Hebb suggests dendrites are strengthened whenever they are used.\n",
+    "> The Organization of Behavior. Hebb, D.O. New York: Wiley & Sons. (1949). [book](), [wikipedia](https://en.wikipedia.org/wiki/Hebbian_theory).\n",
+    "\n",
+    "1951: [Minsky](https://en.wikipedia.org/wiki/Marvin_Minsky) designs a network of artificial neurons.\n",
+    "> [wikipedia](https://en.wikipedia.org/wiki/Stochastic_neural_analog_reinforcement_calculator)\n",
+    "\n",
+    "1958: Roseblatt designs the Perceptron, with step activation functions.\n",
+    "> The perceptron: A probabilistic model for information storage and organization in the brain. Rosenblatt, F. Psychological Review, 65(6), 386-408. (1958) [wikipedia](https://en.wikipedia.org/wiki/Perceptron). [paper](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.588.3775)\n",
+    "\n",
+    "1962: Widrow and Hoff suggest the delta-rule for adapting a network weights to obtain the desired output.\n",
+    "> [wikipedia](https://en.wikipedia.org/wiki/Least_mean_squares_filter)\n",
+    "\n",
+    "1970s and 80s: The \"quiet years\", first AI winter. Attention turns to other methods while computing resources slowly increase. The Lighthill report halts AI research in the UK.\n",
+    "> Artificial Intelligence: A General Survey. James Lighthill. Artificial Intelligence: a paper symposium, UK Science Research Council. (1973).\n",
+    "\n",
+    "1986: Rediscovery of the backpropagation algorithm (for multilayered perceptrons).\n",
+    "> Learning representations by back-propagating errors. Rumelhart, David E.; Hinton, Geoffrey E.; Williams, Ronald J. Nature. 323 (6088): 533–536. 1986. [paper](https://www.nature.com/articles/323533a0).\n",
+    "\n",
+    "1990s: not enough computing power, not enough data, not enough recognition (while other methods like SVMs achieve good results). Second AI winter.\n",
+    "\n",
     "2000s: computing power + available data allow the training of deep multi-layered architectures (deep learning). Massive successes.\n",
     "\n",
     "<div class=\"alert alert-success\"> Feedforward neural networks are computational graphs where edges convey scalar values between neurons (nodes).<br>\n",
