--- a/notebooks/exploratory_data_analysis.ipynb
+++ b/notebooks/exploratory_data_analysis.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:45.092500Z",
-     "start_time": "2018-11-08T21:58:45.082061Z"
+     "end_time": "2018-11-12T15:23:53.904361Z",
+     "start_time": "2018-11-12T15:23:53.893470Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:45.149077Z",
-     "start_time": "2018-11-08T21:58:45.094413Z"
+     "end_time": "2018-11-12T15:23:53.913840Z",
+     "start_time": "2018-11-12T15:23:53.906113Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:45.906485Z",
-     "start_time": "2018-11-08T21:58:45.151044Z"
+     "end_time": "2018-11-12T15:23:54.586104Z",
+     "start_time": "2018-11-12T15:23:53.915562Z"
     }
    },
    "outputs": [],
@@ -71,14 +71,13 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:45.945456Z",
-     "start_time": "2018-11-08T21:58:45.909150Z"
+     "end_time": "2018-11-12T15:23:54.620492Z",
+     "start_time": "2018-11-12T15:23:54.587322Z"
     }
    },
    "outputs": [],
    "source": [
     "import khumeia\n",
-    "from khumeia.data.collection import SatelliteImagesCollection\n",
     "from khumeia.data.item import SatelliteImage"
    ]
   },
@@ -87,8 +86,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.184052Z",
-     "start_time": "2018-11-08T21:58:45.947833Z"
+     "end_time": "2018-11-12T15:23:57.621465Z",
+     "start_time": "2018-11-12T15:23:54.622490Z"
     }
    },
    "outputs": [
@@ -96,10 +95,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2018-11-08 22:58:46,016][tp-isae][get_data][INFO] Downloading training data\n",
-      "[2018-11-08 22:58:46,017][tp-isae][get_data][INFO] Downloading data from tp_isae_train_data.tar.gz to /home/fchouteau/repositories/tp_isae/data/\n",
-      "[2018-11-08 22:58:46,018][tp-isae][get_data][INFO] Extracting tar gz\n",
-      "[2018-11-08 22:58:49,180][tp-isae][get_data][INFO] Done. Your training data is located here /home/fchouteau/repositories/tp_isae/data/raw/trainval\n"
+      "[2018-11-12 16:23:54,636][tp-isae][get_data][INFO] Downloading training data\n",
+      "[2018-11-12 16:23:54,636][tp-isae][get_data][INFO] Downloading data from tp_isae_train_data.tar.gz to /home/fchouteau/repositories/tp_isae/data/\n",
+      "[2018-11-12 16:23:54,637][tp-isae][get_data][INFO] Extracting tar gz\n",
+      "[2018-11-12 16:23:57,618][tp-isae][get_data][INFO] Done. Your training data is located here /home/fchouteau/repositories/tp_isae/data/raw/trainval\n"
      ]
     }
    ],
@@ -119,8 +118,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.201964Z",
-     "start_time": "2018-11-08T21:58:49.186071Z"
+     "end_time": "2018-11-12T15:23:57.636578Z",
+     "start_time": "2018-11-12T15:23:57.623644Z"
     }
    },
    "outputs": [],
@@ -133,8 +132,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.302294Z",
-     "start_time": "2018-11-08T21:58:49.203628Z"
+     "end_time": "2018-11-12T15:23:57.686706Z",
+     "start_time": "2018-11-12T15:23:57.638179Z"
     }
    },
    "outputs": [],
@@ -147,8 +146,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.345655Z",
-     "start_time": "2018-11-08T21:58:49.303907Z"
+     "end_time": "2018-11-12T15:23:57.702098Z",
+     "start_time": "2018-11-12T15:23:57.688181Z"
     }
    },
    "outputs": [],
@@ -161,8 +160,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.426678Z",
-     "start_time": "2018-11-08T21:58:49.347418Z"
+     "end_time": "2018-11-12T15:23:57.720728Z",
+     "start_time": "2018-11-12T15:23:57.703343Z"
     }
    },
    "outputs": [
@@ -188,8 +187,8 @@
       "USGS_CVG     42\n",
       "USGS_MDW     40\n",
       "USGS_FLL     39\n",
-      "USGS_ATL     35\n",
       "USGS_MIA     35\n",
+      "USGS_ATL     35\n",
       "USGS_IND     20\n",
       "USGS_FLG     15\n",
       "USGS_FWA     14\n",
@@ -211,8 +210,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.495624Z",
-     "start_time": "2018-11-08T21:58:49.428560Z"
+     "end_time": "2018-11-12T15:23:57.739358Z",
+     "start_time": "2018-11-12T15:23:57.721971Z"
     }
    },
    "outputs": [
@@ -257,8 +256,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:49.559188Z",
-     "start_time": "2018-11-08T21:58:49.497244Z"
+     "end_time": "2018-11-12T15:23:57.754749Z",
+     "start_time": "2018-11-12T15:23:57.740583Z"
     }
    },
    "outputs": [],
@@ -271,22 +270,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:51.444016Z",
-     "start_time": "2018-11-08T21:58:49.561168Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "trainval_collection = SatelliteImagesCollection.from_path(TRAINVAL_DATA_DIR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:53.346453Z",
-     "start_time": "2018-11-08T21:58:51.445724Z"
+     "end_time": "2018-11-12T15:24:08.229658Z",
+     "start_time": "2018-11-12T15:23:57.755874Z"
     }
    },
    "outputs": [
@@ -294,153 +279,196 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Item collection ---\n",
-      "collection_id: trainval\n",
-      "Number of items: 25\n",
+      "[2018-11-12 16:23:57,768][tp-isae][item][INFO] Looking in /home/fchouteau/repositories/tp_isae/data/raw/trainval\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainval_satellite_images = SatelliteImage.list_items_from_path(TRAINVAL_DATA_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-12T15:24:10.261636Z",
+     "start_time": "2018-11-12T15:24:08.230860Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "--- Item description ---\n",
       "image_id: USGS_ATL\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_ATL.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_ATL.json\n",
       "image_shape: (7852, 6689, 3)\n",
       "number of labels: 35\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_AUS\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_AUS.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_AUS.json\n",
       "image_shape: (7628, 6722, 3)\n",
       "number of labels: 63\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_BHM\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BHM.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BHM.json\n",
       "image_shape: (7544, 6416, 3)\n",
       "number of labels: 10\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_BOS\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BOS.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BOS.json\n",
       "image_shape: (7636, 6128, 3)\n",
       "number of labels: 61\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_BWI\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BWI.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_BWI.json\n",
       "image_shape: (8302, 6408, 3)\n",
       "number of labels: 70\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_CLT\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_CLT.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_CLT.json\n",
       "image_shape: (7534, 6291, 3)\n",
       "number of labels: 88\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_CVG\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_CVG.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_CVG.json\n",
       "image_shape: (7677, 6190, 3)\n",
       "number of labels: 42\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_DSM\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_DSM.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_DSM.json\n",
       "image_shape: (8282, 6501, 3)\n",
       "number of labels: 3\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_EYW\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_EYW.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_EYW.json\n",
       "image_shape: (7679, 6572, 3)\n",
       "number of labels: 202\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_FAT\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FAT.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FAT.json\n",
       "image_shape: (4900, 5414, 3)\n",
       "number of labels: 53\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_FLG\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FLG.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FLG.json\n",
       "image_shape: (4940, 4141, 3)\n",
       "number of labels: 15\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_FLL\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FLL.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FLL.json\n",
       "image_shape: (7917, 6416, 3)\n",
       "number of labels: 39\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_FWA\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FWA.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_FWA.json\n",
       "image_shape: (7710, 6820, 3)\n",
       "number of labels: 14\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_IAD\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IAD.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IAD.json\n",
       "image_shape: (7564, 6896, 3)\n",
       "number of labels: 141\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_IAH\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IAH.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IAH.json\n",
       "image_shape: (7676, 6800, 3)\n",
       "number of labels: 125\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_IND\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IND.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_IND.json\n",
       "image_shape: (7581, 5868, 3)\n",
       "number of labels: 20\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_MDW\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_MDW.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_MDW.json\n",
       "image_shape: (7585, 5853, 3)\n",
       "number of labels: 40\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_MIA\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_MIA.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_MIA.json\n",
       "image_shape: (2377, 5669, 3)\n",
       "number of labels: 35\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_OAK\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_OAK.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_OAK.json\n",
       "image_shape: (7898, 6357, 3)\n",
       "number of labels: 102\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_OHR\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_OHR.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_OHR.json\n",
       "image_shape: (7596, 5854, 3)\n",
       "number of labels: 165\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_PHX\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_PHX.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_PHX.json\n",
       "image_shape: (7620, 6510, 3)\n",
       "number of labels: 58\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_SAN\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SAN.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SAN.json\n",
       "image_shape: (7590, 6000, 3)\n",
       "number of labels: 80\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_SEA\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SEA.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SEA.json\n",
       "image_shape: (7620, 5410, 3)\n",
       "number of labels: 54\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_SFO\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SFO.jpg\n",
       "label_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SFO.json\n",
       "image_shape: (7885, 6357, 3)\n",
       "number of labels: 72\n",
+      "\n",
       "--- Item description ---\n",
       "image_id: USGS_SJC\n",
       "image_file: /home/fchouteau/repositories/tp_isae/data/raw/trainval/USGS_SJC.jpg\n",
@@ -452,7 +480,8 @@
     }
    ],
    "source": [
-    "print(trainval_collection)"
+    "for satellite_image in trainval_satellite_images:\n",
+    "    print(satellite_image)"
    ]
   },
   {
@@ -460,8 +489,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:58:53.366476Z",
-     "start_time": "2018-11-08T21:58:53.347996Z"
+     "end_time": "2018-11-12T15:24:10.282609Z",
+     "start_time": "2018-11-12T15:24:10.262964Z"
     }
    },
    "outputs": [],
@@ -509,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:03.624689Z",
-     "start_time": "2018-11-08T21:58:53.368009Z"
+     "end_time": "2018-11-12T15:24:24.290876Z",
+     "start_time": "2018-11-12T15:24:16.786656Z"
     }
    },
    "outputs": [
@@ -521,7 +550,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "computing histograms...: 100%|██████████| 4/4 [00:08<00:00,  2.11s/it]\n"
+      "computing histograms...: 100%|██████████| 4/4 [00:06<00:00,  1.59s/it]\n"
      ]
     },
     {
@@ -538,16 +567,16 @@
     }
    ],
    "source": [
-    "plot_histogram(trainval_collection.items[:4])"
+    "plot_histogram(trainval_satellite_images[:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:03.646618Z",
-     "start_time": "2018-11-08T21:59:03.626849Z"
+     "end_time": "2018-11-12T15:24:24.307486Z",
+     "start_time": "2018-11-12T15:24:24.296302Z"
     }
    },
    "outputs": [],
@@ -559,11 +588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:05.699943Z",
-     "start_time": "2018-11-08T21:59:03.648584Z"
+     "end_time": "2018-11-12T15:24:26.210629Z",
+     "start_time": "2018-11-12T15:24:24.308562Z"
     }
    },
    "outputs": [
@@ -600,7 +629,7 @@
     }
    ],
    "source": [
-    "get_shapes(trainval_collection)"
+    "get_shapes(trainval_satellite_images)"
    ]
   },
   {
@@ -612,11 +641,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:05.733199Z",
-     "start_time": "2018-11-08T21:59:05.704384Z"
+     "end_time": "2018-11-12T15:24:27.195904Z",
+     "start_time": "2018-11-12T15:24:27.140068Z"
     }
    },
    "outputs": [],
@@ -626,11 +655,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:05.899054Z",
-     "start_time": "2018-11-08T21:59:05.735407Z"
+     "end_time": "2018-11-12T15:24:28.133695Z",
+     "start_time": "2018-11-12T15:24:27.319014Z"
     }
    },
    "outputs": [],
@@ -641,11 +670,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:06.682728Z",
-     "start_time": "2018-11-08T21:59:05.900725Z"
+     "end_time": "2018-11-12T15:24:28.306733Z",
+     "start_time": "2018-11-12T15:24:28.137133Z"
     }
    },
    "outputs": [
@@ -664,7 +693,7 @@
     }
    ],
    "source": [
-    "item = trainval_collection[2]\n",
+    "item = trainval_satellite_images[2]\n",
     "print(item)\n",
     "image = item.image\n",
     "labels = item.labels"
@@ -672,11 +701,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-08T21:59:08.274236Z",
-     "start_time": "2018-11-08T21:59:06.684344Z"
+     "end_time": "2018-11-12T15:24:29.636633Z",
+     "start_time": "2018-11-12T15:24:28.309099Z"
     }
    },
    "outputs": [
