API Documentation, notebook update, documentation update

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training\n",
+    "\n",
+    "Pas d'aide pour celui là !\n",
+    "\n",
+    "Le format d'image étant un format compatible avec les API Data de Keras, voici un exemple de l'auteur de keras pour l'ingestion d'un tel format d'image\n",
+    "\n",
+    "https://github.com/fchollet/deep-learning-with-python-notebooks/blob/master/5.2-using-convnets-with-small-datasets.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
