update Deep Learning notebook

--- a/7 - Deep Learning/pres.tex
+++ b/7 - Deep Learning/pres.tex
@@ -70,7 +70,7 @@ Keywords:
 \item Minibatches
 \item The vanishing gradient problem
 \item Keras, Tensorflow, Caffe, Pytorch, Theano
-\item Avoiding overfitting: dropout, regularization, data augmentation
+\item Avoiding overfitting: early stopping, dropout, regularization, data augmentation
 \item Convolutional neural networks
 \end{itemize}
 \end{frame}
